<resources>
    <string name="app_name">My Recipes</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="recipe_picture">Recipe picture</string>
    <string name="recipe_name">Recipe Name</string>
    <string name="example_portions">12</string>
    <string name="ingredient_name">Ingredient Name</string>
    <string name="ingredient_quantity">Quantidade</string>
    <string name="ingredient_measure">CUP</string>
    <string name="step_short_desc">Short Description</string>
    <string name="ingredients">Ingredients</string>
    <string name="button_play">Play button</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="nutella_pie">Nutella Pie</string>
    <string name="brownie">Brownie</string>
    <string name="yellow_cake">Yellow Cake</string>
    <string name="cheesecake">Cheesecake</string>
    <string name="new_recipe">NEW</string>
    <string name="steps">Steps</string>
</resources>
