<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="3dp"
    android:layout_marginRight="3dp"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="3dp">

        <TextView
            android:id="@+id/textViewNameIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textSize="18sp"
            tools:text="@string/ingredient_name" />

        <TextView
            android:id="@+id/textViewQuantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/textViewNameIn"
            android:layout_alignBottom="@+id/textViewNameIn"
            android:layout_marginStart="12dp"
            android:layout_toEndOf="@+id/textViewMeasure"
            tools:text="@string/ingredient_quantity" />

        <TextView
            android:id="@+id/textViewMeasure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/textViewQuantity"
            android:layout_alignBottom="@+id/textViewQuantity"
            android:layout_marginStart="12dp"
            android:layout_toEndOf="@+id/textViewNameIn"
            tools:text="@string/ingredient_measure" />

    </RelativeLayout>
</android.support.v7.widget.CardView>