<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/recipe_picture"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:contentDescription="@string/recipe_picture"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/recipe_example" />

        <TextView
            android:id="@+id/recipe_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/recipe_picture"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="14dp"
            android:layout_marginEnd="15dp"
            android:layout_marginStart="15dp"
            android:background="@color/colorPrimaryDark"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium.Inverse"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            tools:text="@string/recipe_name"
            android:gravity="center"/>

        <TextView
            android:id="@+id/portion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/recipe_title"
            android:layout_alignParentTop="true"
            android:layout_marginTop="14dp"
            android:background="@drawable/circle_background"
            android:paddingBottom="5dp"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"
            android:paddingTop="5dp"
            android:text="@string/example_portions"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            tools:ignore="RelativeOverlap" />

    </RelativeLayout>

</android.support.v7.widget.CardView>